force-app/main/default/objects/SurveyCRM__c/SurveyCRM__c.object-meta.xml
<CustomObject>
    <label>Survey CRM</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey CRM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>