force-app/main/default/objects/SurveyCRM__c/fields/Question10__c.field-meta.xml
<CustomField>
    <fullName>Question10__c</fullName>
    <label>Quesito 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>