force-app/main/default/objects/SurveyCRM__c/fields/Question13__c.field-meta.xml
<CustomField>
    <fullName>Question13__c</fullName>
    <label>Quesito 13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>