force-app/main/default/objects/SurveyCRM__c/fields/Question15__c.field-meta.xml
<CustomField>
    <fullName>Question15__c</fullName>
    <label>Quesito 15</label>
    <length>255</length>
    <type>Text</type>
</CustomField>