force-app/main/default/objects/SurveyCRM__c/fields/ResponseValueList10__c.field-meta.xml
<CustomField>
    <fullName>ResponseValueList10__c</fullName>
    <label>Elenco valori Risposta 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>