force-app/main/default/objects/SurveyCRM__c/fields/ResponseValueList12__c.field-meta.xml
<CustomField>
    <fullName>ResponseValueList12__c</fullName>
    <label>Elenco valori Risposta 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>