force-app/main/default/objects/SurveyCRM__c/fields/ResponseValueList13__c.field-meta.xml
<CustomField>
    <fullName>ResponseValueList13__c</fullName>
    <label>Elenco valori Risposta 13</label>
    <length>255</length>
    <type>Text</type>
</CustomField>