force-app/main/default/objects/SurveyCRM__c/fields/TypeResponse10__c.field-meta.xml
<CustomField>
    <fullName>TypeResponse10__c</fullName>
    <label>Tipo Risposta 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SurveyResponseType</valueSetName>
    </valueSet>
</CustomField>