force-app/main/default/objects/SurveyCRM__c/fields/TypeResponse13__c.field-meta.xml
<CustomField>
    <fullName>TypeResponse13__c</fullName>
    <label>Tipo Risposta 13</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SurveyResponseType</valueSetName>
    </valueSet>
</CustomField>